tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__StoringComputati-lBuQcNYjQ8-YsMFqW6U1tQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15430251306176296373,
  "prerequisites": [
    3244
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Wireless Computation is similar to Wireless Data, Cloud Computation Server Hatches send computation to Cloud Computation Client Hatches, which other multiblocks can use.\n\nPlace down a Server Hatch on a Quantum Computer, screwdriver the controller to enable Wireless Mode, then after placing down a Client Hatch, you have to set how much computation it should request from the Server Hatch.\n\n[note]Wireless Data Hatches are N:M instead of 1:1[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Storing Computation in the Cloud",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3244
  ],
  "rewards": [],
  "tasks": []
}
