tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__SubspaceCooling-hybMIjq9Q9mxxWKEE8gBWQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4232613824416973145,
  "prerequisites": [
    12108002297788236866
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Cooling exotic ingots proves to be a much bigger challenge than smelting them.\n\nFortunately, reinforcing some of the casings with your new materials allows you to inject exotic coolants that capture extreme heat in miniature tears of spacetime, helping to cool your ingots a bit faster.\n\nWith Subspace Cooling, you can enable the Vacuum Freezer to achieve Perfect Overclocks… at a cost.\n\nTier 1 will consume SpaceTime in liquid form at [warn]7500 L/s[/warn] and allow for 1 Perfect Overclock.\n\n[note]This cost is very high but static, remaining the same for each recipe being run. So, be selective about cooling your ingots.\n\nThe faster the recipes, the more efficient the cost, so find your optimal balance.[/note]\n\nThe Infinity Cooled Casings replace the frost proof casings, so you don't need to worry about damaging your setups.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Subspace Cooling",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12108002297788236866
  ],
  "rewards": [],
  "tasks": []
}
