tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__Tier12UMV-jlXvqqgIQ_Crha2tW0gEQg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12108002297788236866,
  "prerequisites": [
    17850384832099655846
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to the current penultimate tier of New Horizons, Mega Ultimate Voltage.\n\nThis tier is the tier for upgrading everything and provides access to better parts to help you scale up.\n\nGood Luck.\n\n[warn]This tier is not fully complete. Expect stuff to change.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 12 (UMV)",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "tierthemes:umv",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17850384832099655846
  ],
  "rewards": [],
  "tasks": []
}
