tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__Tier4QFTCatalyst-u-2IsyxKTLiZuTY417qWKw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3191447642722440747,
  "prerequisites": [
    16398244587516784439,
    3292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With Shirabon now acquired, you can finally create catalysts to use in your Tier 4 QFT.\n\n[note]These are extremely expensive, you may want to look into DTPF convergence, and faster means of creating Metastable Oganesson before you can make many of these.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 4 QFT Catalysts",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    16398244587516784439,
    3292
  ],
  "rewards": [],
  "tasks": []
}
