tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__UMVFieldGenerato-rdzpjzaCS2epgavzZr6L9A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3927784732497972212,
  "prerequisites": [
    3243,
    3244
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another Field Generator... you are almost done.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UMV Field Generator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3243,
    3244
  ],
  "rewards": [],
  "tasks": []
}
