tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__UMVSuperconducto-sKLPeimGTFS6_hIyc-SOXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2992162928039595612,
  "prerequisites": [
    3243
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the last wires you have to make for now.\n\n[note]Hope you're not using these for hooking up power to your pre-existing machines. Consider the Infinity Wire.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UMV Superconductors",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3243
  ],
  "rewards": [],
  "tasks": []
}
