tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__UXVCircuits-AAAAAAAAAAAAAAAAAAAMrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3244,
  "prerequisites": [
    16398244587516784439,
    3242
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The final circuit in the game: Quantum Circuit, these will be required for lots of UMV/UXV crafts.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UXV Circuits",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    16398244587516784439,
    3242
  ],
  "rewards": [],
  "tasks": []
}
